apostila01(html_js_mongodb): codigo 2.23.1 implementado(barra de navegacao). retomar fazendo os modais

--- a/front/index.html
+++ b/front/index.html
@@ -9,6 +9,41 @@
   </head>
   <body onload="obterFilmes()">
 
+    
+
+    <!-- .container -->
+    <div class="container">
+      <!-- .row.justify-content-center -->
+      <div class="row justify-content-center">
+          <div class="col-md-8">
+            <nav class="navbar navbar-expand-md bg-light">
+              <!-- a.navbar-brand[href=#]{Filmes} -->
+              <a href="#" class="navbar-brand">Filmes</a>
+              <button 
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#myNav"
+                aria-controls="myNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <!-- .collapse.navbar-collapse#myNav -->
+              <div class="collapse navbar-collapse" id="myNav">
+                <div class="navbar-nav ms-auto">
+                  <a href="#" aria-current="page" class="nav-link active me-2">Login</a>
+                  <!-- a.nav-link.m-2[href=#]{Novo usuário} -->
+                  <a href="#" class="nav-link me-2">Novo usuário</a>
+                </div>
+
+              </div>
+            </nav>
+          </div>
+      </div>
+    </div>
+
+
     <div class="container mt-5">
       <div class="row justify-content-center">
         <div class="col-md-8">
